# Agency_OS

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .railway_deploy  .railwayignore  ABN_FIELD_VERIFICATION_REPORT.md  AGENCY_OS_STRATEGY.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_BRIEF.md  AUDIT_GAPS_2026-02-05.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-02-05.md  AUTONOMOUS_EXECUTION_PLAN.md  BOOTSTRAP.md  CAPABILITIES.md  CEO_QUESTIONS.md  CLAUDE.md  CLAUDE_CODE_AUDIT_PHASE_24.md  CLAUDE_CODE_PROMPT_CIS_DATA_GAPS.md  CLAUDE_DESKTOP.md  CLONE_LEARNINGS.md  CODEBASE_AUDIT_2026-02-06.md  CODEBASE_DEEP_DIVE.md  CODE_AUDIT_COMPLETE.md  CONTRIBUTING.md  COOPERATOR.md  CAIAgency_OSxerodatabills_accpay.json  DASHBOARD_README.md  DASHBOARD_UX_REVIEW.md  DAVE_INPUT_FORM.md  DEFINITION_OF_DONE.md  DEPLOYMENT.md  DEPLOYMENT_ISSUES.md  DIRECTIVE_031_COMPLETION_REPORT.md  DOCS_AUDIT_COMPLETE.md  Dockerfile  Dockerfile.dispatcher  Dockerfile.prefect  (+72 more)
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.cache/: browser_use_research.md  claude_code_analysis.md  creators_list.json  extract_transcripts.py  extract_transcripts2.py  image_generation_research.md  openclaw_reddit.txt  openclaw_twitter.txt  openclaw_youtube.txt  openoutreach_research.md  pipecat_research.md  scraped_videos_batch1.json  (+5 more)
mcp-servers/memory-mcp/: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py
mcp-servers/memory-mcp/src/: index.ts
mcp-servers/resend-mcp/: README.md  package-lock.json  package.json  pyproject.toml
mcp-servers/resend-mcp/src/: index.ts
mcp-servers/resend-mcp/src/resend_mcp/: __init__.py  server.py
mcp-servers/telnyx-mcp/: README.md  package-lock.json  package.json  pyproject.toml
mcp-servers/telnyx-mcp/src/: index.ts
mcp-servers/telnyx-mcp/src/telnyx_mcp/: __init__.py  server.py
mcp-servers/unipile-mcp/: README.md  package-lock.json  package.json  pyproject.toml
mcp-servers/unipile-mcp/src/: index.ts
mcp-servers/unipile-mcp/src/unipile_mcp/: __init__.py  server.py
mcp-servers/vapi-mcp/: README.md  package-lock.json  package.json  pyproject.toml
mcp-servers/vapi-mcp/src/: index.ts
mcp-servers/vapi-mcp/src/vapi_mcp/: __init__.py  server.py
(+4720 files in other folders)
