[project]
name = "memory-mcp"
version = "1.0.0"
description = "MCP server for semantic memory search over elliot_internal.memories (Supabase + pgvector)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
memory-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
