[project]
name = "telnyx-mcp"
version = "0.1.0"
description = "MCP server for Telnyx SMS and voice"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
telnyx-mcp = "telnyx_mcp.server:main"
