[project]
name = "unipile-mcp"
version = "0.1.0"
description = "MCP server for Unipile LinkedIn automation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
unipile-mcp = "unipile_mcp.server:main"
