[project]
name = "vapi-mcp"
version = "0.1.0"
description = "MCP server for Vapi voice AI assistants"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vapi-mcp = "vapi_mcp.server:main"
